// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CacheProvider Endpoint should resolve useResource() with SimpleRecords 1`] = `
[
  PaginatedArticleResource {
    "author": UserResource {
      "email": "bob@bob.com",
      "id": 23,
      "isAdmin": false,
      "username": "charles",
    },
    "content": "whatever",
    "id": 5,
    "tags": [
      "a",
      "best",
      "react",
    ],
    "title": "hi ho",
  },
  PaginatedArticleResource {
    "author": UserResource {
      "email": "bob@bob.com",
      "id": 23,
      "isAdmin": false,
      "username": "charles",
    },
    "content": "whatever",
    "id": 3,
    "tags": [],
    "title": "the next time",
  },
]
`;

exports[`CacheProvider Optimistic Updates indexes should resolve parallel useResource() request 1`] = `
IndexedUserResource {
  "email": "bob@bob.com",
  "id": 23,
  "isAdmin": false,
  "username": "bob",
}
`;

exports[`CacheProvider Optimistic Updates indexes should resolve parallel useResource() request 2`] = `
IndexedUserResource {
  "email": "bob@bob.com",
  "id": 23,
  "isAdmin": false,
  "username": "charlie",
}
`;

exports[`CacheProvider should resolve useResource() with SimpleRecords 1`] = `
[
  PaginatedArticleResource {
    "author": UserResource {
      "email": "bob@bob.com",
      "id": 23,
      "isAdmin": false,
      "username": "charles",
    },
    "content": "whatever",
    "id": 5,
    "tags": [
      "a",
      "best",
      "react",
    ],
    "title": "hi ho",
  },
  PaginatedArticleResource {
    "author": UserResource {
      "email": "bob@bob.com",
      "id": 23,
      "isAdmin": false,
      "username": "charles",
    },
    "content": "whatever",
    "id": 3,
    "tags": [],
    "title": "the next time",
  },
]
`;

exports[`CacheProvider useResource() should throw errors on malformed response 1`] = `
[Error: Error processing GET http://test.com/article-cooler/878

Full Schema: {
  "name": "CoolerArticleResource",
  "schema": {
    "author": {
      "name": "UserResource",
      "schema": {},
      "key": "http://test.com/user/"
    }
  },
  "key": "http://test.com/article-cooler/"
}

Error:
Attempted to initialize CoolerArticleResource with an array, but named members were expected

This is likely due to a malformed response.
Try inspecting the network response or fetch() return value.
Or use debugging tools: https://resthooks.io/docs/guides/debugging
Learn more about schemas: https://resthooks.io/docs/api/schema
If this is a mistake, you can disable this check by setting static automaticValidation = 'silent'

First three members: [
  1
]]
`;

exports[`ExternalCacheProvider Endpoint should resolve useResource() with SimpleRecords 1`] = `
[
  PaginatedArticleResource {
    "author": UserResource {
      "email": "bob@bob.com",
      "id": 23,
      "isAdmin": false,
      "username": "charles",
    },
    "content": "whatever",
    "id": 5,
    "tags": [
      "a",
      "best",
      "react",
    ],
    "title": "hi ho",
  },
  PaginatedArticleResource {
    "author": UserResource {
      "email": "bob@bob.com",
      "id": 23,
      "isAdmin": false,
      "username": "charles",
    },
    "content": "whatever",
    "id": 3,
    "tags": [],
    "title": "the next time",
  },
]
`;

exports[`ExternalCacheProvider Optimistic Updates indexes should resolve parallel useResource() request 1`] = `
IndexedUserResource {
  "email": "bob@bob.com",
  "id": 23,
  "isAdmin": false,
  "username": "bob",
}
`;

exports[`ExternalCacheProvider Optimistic Updates indexes should resolve parallel useResource() request 2`] = `
IndexedUserResource {
  "email": "bob@bob.com",
  "id": 23,
  "isAdmin": false,
  "username": "charlie",
}
`;

exports[`ExternalCacheProvider should resolve useResource() with SimpleRecords 1`] = `
[
  PaginatedArticleResource {
    "author": UserResource {
      "email": "bob@bob.com",
      "id": 23,
      "isAdmin": false,
      "username": "charles",
    },
    "content": "whatever",
    "id": 5,
    "tags": [
      "a",
      "best",
      "react",
    ],
    "title": "hi ho",
  },
  PaginatedArticleResource {
    "author": UserResource {
      "email": "bob@bob.com",
      "id": 23,
      "isAdmin": false,
      "username": "charles",
    },
    "content": "whatever",
    "id": 3,
    "tags": [],
    "title": "the next time",
  },
]
`;

exports[`ExternalCacheProvider useResource() should throw errors on malformed response 1`] = `
[Error: Error processing GET http://test.com/article-cooler/878

Full Schema: {
  "name": "CoolerArticleResource",
  "schema": {
    "author": {
      "name": "UserResource",
      "schema": {},
      "key": "http://test.com/user/"
    }
  },
  "key": "http://test.com/article-cooler/"
}

Error:
Attempted to initialize CoolerArticleResource with an array, but named members were expected

This is likely due to a malformed response.
Try inspecting the network response or fetch() return value.
Or use debugging tools: https://resthooks.io/docs/guides/debugging
Learn more about schemas: https://resthooks.io/docs/api/schema
If this is a mistake, you can disable this check by setting static automaticValidation = 'silent'

First three members: [
  1
]]
`;
